--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <title>
+    Aayatullah Adeyemi's Portfolio
+  </title>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
