--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <title>
     Aayatullah Adeyemi's Portfolio
   </title>
+  <head>
+    Aayatullah Adeyemi's Portfolio
+  </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello World!! </h1>
+<p>Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
+  I am a computer science major and my interests include cybersecurity, software engineering, data analytics and project management (In that order). 
+  It is summer of 2025, and I hope I can update this when I land my first job. I was inspired to create this because I have a lot of ideas that I want to showcase. I hope to become a cloud security engineer, while also being a software engineer.
+My interests outside of classroom includes activism, debates and writing. 
+Certifications
+Microsoft power platform fundamentals</p>
+  <button> Projects</button>
+  <button>Social Media</button>
+  <button> Pictures of interesting thisgs</button>
 </body>
 </html>
