--- a/Projects.html
+++ b/Projects.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html>
-
-</html>
-Classroom Finder (in development)
+<body style="background-color:c1121f">
+ <p>Classroom Finder (in development)
 - Web application that helps students locate available classrooms based on schedule and location inputs
 - Designed to improve access to academic spaces and resource efficiency
-Feel free to check out
+<a href="https://github.com/Adedoja/My-study-Spaces">Feel free to check out </a>
 
 MoodMe – AI Mood Detection Tool
 - Created a real-time mood detection program using C++ and HTML.
 - Focused on user interaction and logic-based sentiment recognition
+   </p> 
+  
+</body>
+
+</html>
