--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <head>
     Aayatullah Adeyemi's Portfolio
   </head>
+  <td>
+    <u1>
+    
+    <a href="Projects.html">Youtube</a>
+    <a>Tiktok</a>
+    <a>instagram</a>
+      </u1>
+ </td>
 <body style="background-color:c1121f">
 <h1>Hello World!! </h1>
 <p style=">Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
