--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <head>
     Aayatullah Adeyemi's Portfolio
   </head>
+  <table>
   <td>
     <u1>
     
@@ -25,5 +26,6 @@ Microsoft power platform fundamentals</p>
   <button onclick="location.href='Projects.html'"> Projects</button>
   <button>Social Media</button>
   <button> Pictures of interesting thisgs</button>
+  </table>
 </body>
 </html>
