--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
   <head>
     Aayatullah Adeyemi's Portfolio
   </head>
-  <table>
-  <td>
+  <body style="background-color:c1121f">
+  <table width="100%" border="1" cellspacing="0" cellpadding="0">
+    
+  <tr>
+    <td width="200%" valign="top">
     <u1>
     
-    <a href="Projects.html">Youtube</a>
-    <a>Tiktok</a>
-    <a>instagram</a>
+   <li> <a href="Projects.html">Youtube</a></li>
+    <li><a>Tiktok</a></li>
+    <li><a>instagram</a></li>
       </u1>
  </td>
-    <td>
-<body style="background-color:c1121f">
+    <td valign="top">
+
 <h1>Hello World!! </h1>
 <p style=">Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
   I am a computer science major and my interests include cybersecurity, software engineering, data analytics and project management (In that order). 
@@ -24,7 +27,7 @@
 My interests outside of classroom includes activism, debates and writing. 
 Certifications
 Microsoft power platform fundamentals</p>
-  <button onclick="location.href='Projects.html'"> Projects</button>
+  <button onclick="window.location.href='Projects.html'"> Projects</button>
   <button>Social Media</button>
   <button> Pictures of interesting thisgs</button>
   </td>
