--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     Aayatullah Adeyemi's Portfolio
   </head>
-  <body style="background-color:c1121f">
+  <body style="background-color:#c1121f">
   <table width="100%" border="1" cellspacing="0" cellpadding="0">
     
   <tr>
@@ -18,7 +18,7 @@
     <li><a>instagram</a></li>
       </ul>
  </td>
-    <td valign="top">
+    <td valign="bottom">
 
 <h1>Hello World!! </h1>
 <p style=">Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
