--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     Aayatullah Adeyemi's Portfolio
   </head>
   <body style="background-color:#c1121f">
-  <table width="100%" border="1" cellspacing="0" cellpadding="0">
-    
-  <tr>
-    <td width="200%" valign="top">
+
+  <div>
+   
     <ul>
     
    <li> <a href="Projects.html">Youtube</a></li>
     <li><a>Tiktok</a></li>
     <li><a>instagram</a></li>
       </ul>
- </td>
-    <td valign="bottom">
+      <</div>
 
+  </table>
 <h1>Hello World!! </h1>
 <p style=">Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
   I am a computer science major and my interests include cybersecurity, software engineering, data analytics and project management (In that order). 
@@ -30,7 +29,7 @@ Microsoft power platform fundamentals</p>
   <button onclick="window.location.href='Projects.html'"> Projects</button>
   <button>Social Media</button>
   <button> Pictures of interesting thisgs</button>
-  </td>
-  </table>
+
+
 </body>
 </html>
