--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <li><a>Tiktok</a></li>
     <li><a>instagram</a></li>
       </ul>
-      <</div>
+      </div>
 
-  </table>
+  
 <h1>Hello World!! </h1>
-<p style=">Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
+<p>Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
   I am a computer science major and my interests include cybersecurity, software engineering, data analytics and project management (In that order). 
   It is summer of 2025, and I hope I can update this when I land my first job. I was inspired to create this because I have a lot of ideas that I want to showcase. I hope to become a cloud security engineer, while also being a software engineer.
 My interests outside of classroom includes activism, debates and writing. 
