--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 My interests outside of classroom includes activism, debates and writing. 
 Certifications
 Microsoft power platform fundamentals</p>
-  <button onclick="window.location.href='Projects.html'"> Projects</button>
+  <button onclick="window.location.href:'Projects.html'"> Projects</button>
   <button>Social Media</button>
   <button> Pictures of interesting thisgs</button>
 
