--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div>
    
-    <ul>
+    <ul style="list-style: none; display:flex; gap:12px;">
     
    <li> <a href="Projects.html">Youtube</a></li>
     <li><a>Tiktok</a></li>
