--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <title>
-    Aayatullah Adeyemi's Portfolio
-  </title>
-  <head>
-    Aayatullah Adeyemi's Portfolio
-  </head>
-  <body style="background-color:#c1121f">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Aayatullah Adeyemi's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  <div>
-   
-    <ul style="list-style: none; display: flex; gap: 12px;">
-    
-   <li> <a href="Projects.html">Youtube</a></li>
-    <li><a>Tiktok</a></li>
-    <li><a>instagram</a></li>
-      </ul>
-      </div>
+  <nav>
+    <ul>
+      <li><a href="Projects.html">🎬 YouTube</a></li>
+      <li><a href="#">🎵 TikTok</a></li>
+      <li><a href="#">📸 Instagram</a></li>
+    </ul>
+  </nav>
 
-  
-<h1>Hello World!! </h1>
-<p>Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
-  I am a computer science major and my interests include cybersecurity, software engineering, data analytics and project management (In that order). 
-  It is summer of 2025, and I hope I can update this when I land my first job. I was inspired to create this because I have a lot of ideas that I want to showcase. I hope to become a cloud security engineer, while also being a software engineer.
-My interests outside of classroom includes activism, debates and writing. 
-Certifications
-Microsoft power platform fundamentals</p>
-  <button onclick="window.location.href:'Projects.html'"> Projects</button>
-  <button>Social Media</button>
-  <button> Pictures of interesting thisgs</button>
+  <h1>Hello World!!</h1>
 
+  <p>Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
+    I am a computer science major and my interests include cybersecurity, software engineering, data analytics, and project management (In that order). 
+    It is summer of 2025, and I hope I can update this when I land my first job. I was inspired to create this because I have a lot of ideas that I want to showcase.
+    I hope to become a cloud security engineer, while also being a software engineer.
+    <br><br>
+    My interests outside of the classroom include activism, debates, and writing.
+    <br><br>
+    📜 <strong>Certifications:</strong> Microsoft Power Platform Fundamentals
+  </p>
+
+  <button onclick="window.location.href='Projects.html'">🚀 Projects</button>
+  <button>💬 Social Media</button>
+  <button>📷 Pictures of Interesting Things</button>
 
 </body>
 </html>
+
