--- a/Projects.html
+++ b/Projects.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
-<body style="background-color:c1121f">
+ <head>
+  <nav>
+    <ul>
+      <li><a href="Projects.html">Projects</a></li>
+      <li><a href="#"> About Me</a></li>
+      <li><a href="#">Socials</a></li>
+    </ul>
+  </nav>
+ </head>
+<body style="background-color:#c1121f">
  <p>Classroom Finder (in development)
 - Web application that helps students locate available classrooms based on schedule and location inputs
 - Designed to improve access to academic spaces and resource efficiency
