--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <nav>
     <ul>
-      <li><a href="Projects.html">🎬 YouTube</a></li>
-      <li><a href="#">🎵 TikTok</a></li>
-      <li><a href="#">📸 Instagram</a></li>
+     <li><a href="Projects.html">Projects</a></li>
+      <li><a href="index.html"> About Me</a></li>
+      <li><a href="Socials.html">Socials</a></li>
     </ul>
   </nav>
 
