--- a/Projects.html
+++ b/Projects.html
@@ -4,8 +4,8 @@
   <nav>
     <ul>
       <li><a href="Projects.html">Projects</a></li>
-      <li><a href="#"> About Me</a></li>
-      <li><a href="#">Socials</a></li>
+      <li><a href="index.html"> About Me</a></li>
+      <li><a href="Socials.html">Socials</a></li>
     </ul>
   </nav>
  </head>
