--- a/Socials.html
+++ b/Socials.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html>
 <head>
+       <link rel="stylesheet" hrel="style.css">
 <title> Social Media </title>
+</head>
+       
+<body style="background-color:#c1121f">
        <nav>
     <ul>
-      <li><a href="Projects.html">Projects</a></li>
-      <li><a href="index.html"> About Me</a></li>
-      <li><a href="Socials.html">Socials</a></li>
+      <li><a href="Projects.html"> 👩🏾‍💻 Projects</a></li>
+      <li><a href="index.html"> 🚀 About Me</a></li>
+      <li><a href="Socials.html"> 📡Socials</a></li>
     </ul>
   </nav>
-</head>
-<body style="background-color:#c1121f">
-      <li><a href="https://www.linkedin.com/in/aayatullahadeyemi/"> Linkedin mic</a></li>
+
+      <li><a href="https://www.linkedin.com/in/aayatullahadeyemi/"> Linkedin 💼 </a></li>
       <li><a href="https://www.youtube.com/@AayatullahAdeyemi">🎬 YouTube</a></li>
       <li><a href="https://www.tiktok.com/@dcantwrite">🎵 TikTok</a></li>
-      <li><a href="https://open.spotify.com/show/3yHboQ3YsHz0xFIBslWgKh"> Podcasts mic</a></li>
+      <li><a href="https://open.spotify.com/show/3yHboQ3YsHz0xFIBslWgKh"> 🎙️ Podcasts </a></li>
      <li><a href="#">📸 Instagram</a></li>
-     <li><a href="https://www.wattpad.com/user/Princess_pearls/"> Wattpad Book</a></li>
+     <li><a href="https://www.wattpad.com/user/Princess_pearls/"> 📖Wattpad </a></li>
 </body>
