--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 
   <nav>
-    <ul>
-     <li><a href="Projects.html">Projects</a></li>
-      <li><a href="index.html"> About Me</a></li>
-      <li><a href="Socials.html">Socials</a></li>
+     <ul>
+      <li><a href="Projects.html"> 👩🏾‍💻 Projects</a></li>
+      <li><a href="index.html"> 🚀 About Me</a></li>
+      <li><a href="Socials.html"> 📡Socials</a></li>
     </ul>
   </nav>
 
