--- a/Projects.html
+++ b/Projects.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
  <head>
+  <link rel="stylesheet" href="style.css">
+   </head>
   <nav>
-    <ul>
-      <li><a href="Projects.html">Projects</a></li>
-      <li><a href="index.html"> About Me</a></li>
-      <li><a href="Socials.html">Socials</a></li>
+ <ul>
+      <li><a href="Projects.html"> 👩🏾‍💻 Projects</a></li>
+      <li><a href="index.html"> 🚀 About Me</a></li>
+      <li><a href="Socials.html"> 📡Socials</a></li>
     </ul>
   </nav>
- </head>
+
 <body style="background-color:#c1121f">
  <p>Classroom Finder (in development)
 - Web application that helps students locate available classrooms based on schedule and location inputs
