--- a/Socials.html
+++ b/Socials.html
@@ -5,7 +5,7 @@
 <title> Social Media </title>
 </head>
        
-<body style="background-color:#c1121f">
+<body>
        <nav>
     <ul>
       <li><a href="Projects.html"> 👩🏾‍💻 Projects</a></li>
