--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
     </ul>
   </nav>
 
-<body style="background-color:#c1121f">
+<body>
  <p>Classroom Finder (in development)
 - Web application that helps students locate available classrooms based on schedule and location inputs
 - Designed to improve access to academic spaces and resource efficiency
