--- a/Projects.html
+++ b/Projects.html
@@ -13,16 +13,23 @@
   </nav>
 
 
- <p>Classroom Finder (in development)
-- Web application that helps students locate available classrooms based on schedule and location inputs
-- Designed to improve access to academic spaces and resource efficiency
-<a href="https://github.com/Adedoja/My-study-Spaces">Feel free to check out </a>
+  <h1>🛠️ My Projects</h1>
+  <div class="projects">
 
-MoodMe – AI Mood Detection Tool
-- Created a real-time mood detection program using C++ and HTML.
-- Focused on user interaction and logic-based sentiment recognition
-   </p> 
-  
+ <h2>Classroom Finder <span>(in development)</span></h2>
+  <ul>
+<li> Web application that helps students locate available classrooms based on schedule and location inputs</li>
+<li>Designed to improve access to academic spaces and resource efficiency</li> 
+<li> <a href="https://github.com/Adedoja/My-study-Spaces">Feel free to check out</li> 
+</ul>
+ </div>
+<div class="project">
+<h2>MoodMe – AI Mood Detection Tool</h2>
+  <ul>
+<li>Created a real-time mood detection program using C++ and HTML.</li>
+<li>Focused on user interaction and logic-based sentiment recognition </li>
+  </ul>
+  </div>
 </body>
 
 </html>
