--- a/Socials.html
+++ b/Socials.html
@@ -13,11 +13,12 @@
       <li><a href="Socials.html"> 📡Socials</a></li>
     </ul>
   </nav>
-
+<ul class="social-links">
       <li><a href="https://www.linkedin.com/in/aayatullahadeyemi/"> Linkedin 💼 </a></li>
       <li><a href="https://www.youtube.com/@AayatullahAdeyemi">🎬 YouTube</a></li>
       <li><a href="https://www.tiktok.com/@dcantwrite">🎵 TikTok</a></li>
       <li><a href="https://open.spotify.com/show/3yHboQ3YsHz0xFIBslWgKh"> 🎙️ Podcasts </a></li>
      <li><a href="#">📸 Instagram</a></li>
      <li><a href="https://www.wattpad.com/user/Princess_pearls/"> 📖Wattpad </a></li>
+</ul>
 </body>
