--- a/Socials.html
+++ b/Socials.html
@@ -13,6 +13,7 @@
       <li><a href="Socials.html"> 📡Socials</a></li>
     </ul>
   </nav>
+       <h1>📲 Connect With Me</h1>
 <ul class="social-links">
       <li><a href="https://www.linkedin.com/in/aayatullahadeyemi/"> Linkedin 💼 </a></li>
       <li><a href="https://www.youtube.com/@AayatullahAdeyemi">🎬 YouTube</a></li>
@@ -22,3 +23,4 @@
      <li><a href="https://www.wattpad.com/user/Princess_pearls/"> 📖Wattpad </a></li>
 </ul>
 </body>
+</html>
