--- a/Projects.html
+++ b/Projects.html
@@ -6,7 +6,7 @@
  <body>
   <nav>
  <ul>
-      <li><a href="Projects.html"> 👩🏾‍💻 Projects</a></li>
+   
       <li><a href="index.html"> 🚀 About Me</a></li>
       <li><a href="Socials.html"> 📡Socials</a></li>
     </ul>
@@ -20,7 +20,7 @@
   <ul>
 <li> Web application that helps students locate available classrooms based on schedule and location inputs</li>
 <li>Designed to improve access to academic spaces and resource efficiency</li> 
-<li> <a href="https://github.com/Adedoja/My-study-Spaces">Feel free to check out</li> 
+<li> <a href="https://github.com/Adedoja/My-study-Spaces">Feel free to check out</a></li> 
 </ul>
  </div>
 <div class="project">
