--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
 </head>
 <body>
 
-  <nav>
-     <ul>
-      <li><a href="Projects.html"> 👩🏾‍💻 Projects</a></li>
-      <li><a href="index.html"> 🚀 About Me</a></li>
-      <li><a href="Socials.html"> 📡Socials</a></li>
-    </ul>
-  </nav>
-
+ 
   <h1>Hello World!!</h1>
 
   <p>Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
@@ -28,7 +21,7 @@
   </p>
 
   <button onclick="window.location.href='Projects.html'">🚀 Projects</button>
-  <button>💬 Social Media</button>
+  <button onclick="window.location.href='socials.html'">💬 Social Media</button>
   <button>📷 Pictures of Interesting Things</button>
 
 </body>
