--- a/Socials.html
+++ b/Socials.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-       <link rel="stylesheet" hrel="style.css">
+       <link rel="stylesheet" href="style.css">
 <title> Social Media </title>
 </head>
        
