--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </p>
 
   <button onclick="window.location.href='Projects.html'">🚀 Projects</button>
-  <button onclick="window.location.href='socials.html'">💬 Social Media</button>
+  <button onclick="window.location.href='Socials.html'">💬 Social Media</button>
   <button>📷 Pictures of Interesting Things</button>
 
 </body>
