--- a/Projects.html
+++ b/Projects.html
@@ -4,13 +4,7 @@
   <link rel="stylesheet" href="style.css">
    </head>
  <body>
-  <nav>
- <ul>
-   
-      <li><a href="index.html"> 🚀 About Me</a></li>
-      <li><a href="Socials.html"> 📡Socials</a></li>
-    </ul>
-  </nav>
+ 
 
 
   <h1>🛠️ My Projects</h1>
@@ -30,6 +24,8 @@
 <li>Focused on user interaction and logic-based sentiment recognition </li>
   </ul>
   </div>
+    <button onclick="window.location.href='index.html'">💬About Me</button>
+  <button onclick="window.location.href='Socials.html'">Social Media</button>
 </body>
 
 </html>
