--- a/Socials.html
+++ b/Socials.html
@@ -9,13 +9,15 @@
        
        <h1>📲 Connect With Me</h1>
 <ul class="social-links">
-      <li><a href="https://www.linkedin.com/in/aayatullahadeyemi/"> Linkedin 💼 </a></li>
-      <li><a href="https://www.youtube.com/@AayatullahAdeyemi">🎬 YouTube</a></li>
-      <li><a href="https://www.tiktok.com/@dcantwrite">🎵 TikTok</a></li>
-      <li><a href="https://open.spotify.com/show/3yHboQ3YsHz0xFIBslWgKh"> 🎙️ Podcasts </a></li>
-     <li><a href="#">📸 Instagram</a></li>
-     <li><a href="https://www.wattpad.com/user/Princess_pearls/"> 📖Wattpad </a></li>
-</ul>
+         <button onclick="window.location.href='https://www.linkedin.com/in/aayatullahadeyemi/'">Linkedin 💼</button>
+       <button onclick="window.location.href='https://www.youtube.com/@AayatullahAdeyemi'">🎬 YouTube</button>
+       <button onclick="window.location.href='https://www.tiktok.com/@dcantwrite'">🎵 TikTok</button>
+       <button onclick="window.location.href='https://open.spotify.com/show/3yHboQ3YsHz0xFIBslWgKh'">🎙️ Podcasts</button>
+       <br>
+       <button onclick="window.location.href='https://open.spotify.com/show/3yHboQ3YsHz0xFIBslWgKh'">📸 Instagram</button>
+        <button onclick="window.location.href='https://www.wattpad.com/user/Princess_pearls/'">📖Wattpad</button>
+    <br>
+     
        <button onclick="window.location.href='index.html'">💬 About Me</button>
        <button onclick="window.location.href='Projects.html'">🚀 About me</button>
   
