--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
  
   <h1>Hello World!!</h1>
 
-  <p>Welcome to my page. My name is Aayatullah Adeyemi, I am a senior at the University of North Florida.
-    I am a computer science major and my interests include cybersecurity, software engineering, data analytics, and project management (In that order). 
-    It is summer of 2025, and I hope I can update this when I land my first job. I was inspired to create this because I have a lot of ideas that I want to showcase.
-    I hope to become a cloud security engineer, while also being a software engineer.
-    <br><br>
+  <p>Hi, I’m Aayatullah Adeyemi — a Computer Science senior at the University of North Florida focused on cybersecurity and software development.
+   I build things, break things (ethically), and care about how systems fail. My work spans security labs, backend projects, databases, and automation, with a strong interest in defensive security, data, and applied AI.
+   I am currently seeking entry-level roles or internships where I can turn technical curiosity into real-world impact.
     My interests outside of the classroom include activism, debates, and writing.
     <br><br>
-    📜 <strong>Certifications:</strong> Microsoft Power Platform Fundamentals
+     <strong>Certifications:</strong> Microsoft Power Platform Fundamentals
   </p>
 
-  <button onclick="window.location.href='Projects.html'">🚀 Projects</button>
-  <button onclick="window.location.href='Socials.html'">💬 Social Media</button>
-  <button>📷 Pictures of Interesting Things</button>
+  <button onclick="window.location.href='Projects.html'"> Projects</button>
+  <button onclick="window.location.href='Socials.html'">Social Media</button>
+  <button> Pictures of Interesting Things</button>
 
 </body>
 </html>
+
 
