--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
  
   <h1>Hello World!!</h1>
 
-  <p>Hi, I’m Aayatullah Adeyemi — a Computer Science senior at the University of North Florida focused on cybersecurity and software development.
+  <p>Hi, I’m Aayatullah Adeyemi, a computer Science senior at the University of North Florida focused on cybersecurity and software development.
    I build things, break things (ethically), and care about how systems fail. My work spans security labs, backend projects, databases, and automation, with a strong interest in defensive security, data, and applied AI.
    I am currently seeking entry-level roles or internships where I can turn technical curiosity into real-world impact.
     My interests outside of the classroom include activism, debates, and writing.
     <br><br>
-     <strong>Certifications:</strong> Microsoft Power Platform Fundamentals
+     <strong>Certifications:</strong> Microsoft Power Platform Fundamentals, Google IT fundamentals
   </p>
 
   <button onclick="window.location.href='Projects.html'"> Projects</button>
@@ -24,5 +24,6 @@
 
 </body>
 </html>
+
 
 
