--- a/Socials.html
+++ b/Socials.html
@@ -13,7 +13,7 @@
        <button onclick="window.location.href='https://www.youtube.com/@AayatullahAdeyemi'"> YouTube</button>
        <button onclick="window.location.href='https://open.spotify.com/show/3yHboQ3YsHz0xFIBslWgKh'"> Podcasts</button>
        <br>
-        <button onclick="window.location.href='https://www.wattpad.com/user/Princess_pearls/'">📖Wattpad</button>
+        <button onclick="window.location.href='https://www.wattpad.com/user/Princess_pearls/'">Wattpad</button>
     <br>
      
        <button onclick="window.location.href='index.html'">About Me</button>
