--- a/Projects.html
+++ b/Projects.html
@@ -7,7 +7,7 @@
  
 
 
-  <h1>🛠️ My Projects</h1>
+  <h1>My Projects</h1>
   <div class="projects">
 
  <h2>Classroom Finder <span>(in development)</span></h2>
@@ -24,7 +24,7 @@
 <li>Focused on user interaction and logic-based sentiment recognition </li>
   </ul>
   </div>
-    <button onclick="window.location.href='index.html'">💬About Me</button>
+    <button onclick="window.location.href='index.html'">About Me</button>
   <button onclick="window.location.href='Socials.html'">Social Media</button>
 </body>
 
